[project]
name = "yolosegment2labelme"
version = "0.0.4"
authors = [
  { name="Abonia Sojasingarayar", email="aboniaa@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Abonia1/yolosegment2labelme"
Issues = "https://github.com/Abonia1/yolosegment2labelme/issues"